--- a/template.yml
+++ b/template.yml
@@ -7,7 +7,7 @@ Resources:
     Properties:
       SecurityGroups:
         - !Ref InstanceSecurityGroup
-      KeyName: AWS_Keypair_ND9991
+      KeyName: udacity
       ImageId: ami-052efd3df9dad4825 # you may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
       InstanceType: t3.micro
   InstanceSecurityGroup:
