--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,18 +2,22 @@
 version: 2.1
 orbs: null
 jobs:
-  create_infrastructure:
+  configure_infrastructure:
     docker:
-      - image: amazon/aws-cli
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - 1c:96:c3:7b:5a:95:62:78:96:7f:e6:a7:e7:ab:f4:70
       - run:
-          name: Create Cloudformation Stack
+          name: Install Ansible
           command: |
-            aws cloudformation deploy \
-              --template-file template.yml \
-              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-              --region us-east-1
+            apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            ansible-playbook -i inventory main-remote.yml
 workflows:
   myWorkflow:
     jobs:
