--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,25 +15,28 @@ jobs:
               --template-file template.yml \
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
-              
-  # configure_infrastructure:
-  #   docker:
-  #     - image: python:3.7-alpine3.11
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #         fingerprints:
-  #           - d8:93:b6:0a:e4:73:07:cd:f4:14:0f:1b:12:f3:53:6e
-  #     - run:
-  #         name: Install Ansible
-  #         command: |
-  #           apk add --update ansible
-  #     - run:
-  #         name: Run Playbook and Configure server
-  #         command: |
-  #           ansible-playbook -i inventory main-remote.yml
+      - run: 
+          name: Getting Public IP from EC2 to inventory 
+          command:  |
+            aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --output text >> inventory       
+  configure_infrastructure:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - ["d8:93:b6:0a:e4:73:07:cd:f4:14:0f:1b:12:f3:53:6e"]
+      - run:
+          name: Install Ansible
+          command: |
+            apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            ansible-playbook -i inventory main-remote.yml
 workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
-      # - configure_infrastructure
+      - configure_infrastructure
