--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,27 @@ jobs:
           name: Run Playbook and Configure server
           command: |
             ansible-playbook -i inventory main-remote.yml
+
+  smoke_test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - run: apk add --update curl
+      - run:
+          name: smoke test
+          command: |
+            URL="https://blog.udacity.com/"
+            # Test if website exists
+            if curl -s --head ${URL} 
+            then
+              return 0
+            else
+              return 1
+            fi
+            
 workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
       - configure_infrastructure
+      - smoke_test
