added repeated command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,20 @@
 ---
 version: 2.1
 orbs: null
+
+commands: 
+  # Exercise - Rollback
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+          # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
+            
 jobs:
-#  Exercise - Rollback
   create_infrastructure: 
     docker:
       - image: amazon/aws-cli
@@ -42,15 +54,8 @@ jobs:
       - run: apk add --update curl
       - run:
           name: smoke test
-          command: |
-            URL="https://blog.udacity.com/"
-            # Test if website exists
-            if curl -s --head ${URL} 
-            then
-              return 0
-            else
-              return 1
-            fi
+          command: return 1
+      - destroy_environment     
             
 workflows:
   myWorkflow:
